<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/l_basic">

    <RelativeLayout
        android:id="@+id/l_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_reset"
            style="@style/MidTextStyle"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/btn_replay"
            android:gravity="center"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btn_replay"
            style="@style/MidTextStyle"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/btn_replay" />

        <TextView
            android:id="@+id/tv_salary_pay"
            style="@style/MiniTextStyle"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_rent_pay"
            android:background="@color/salary_pay_background"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:singleLine="false"
            android:text="@string/salary_pay" />

        <TextView
            android:id="@+id/tv_rent_pay"
            style="@style/MiniTextStyle"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_date"
            android:background="@color/rent_pay_background"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:singleLine="false"
            android:text="@string/rent_pay" />


        <TextView
            android:id="@+id/tv_date"
            style="@style/MidTextStyle"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/date_background"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:singleLine="false"
            android:text="@string/today_date" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/l_status"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/l_title"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_money"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/money_value" />

        <TextView
            android:id="@+id/tv_blood"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/blood_value" />

        <TextView
            android:id="@+id/tv_mood"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mood_value" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_refrigerator"
                style="@style/RefrigeratorTextStyle"
                android:layout_weight="1"
                android:background="@drawable/refrigerator"
                android:text="@string/refrigerator"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_cabinet"
                style="@style/RefrigeratorTextStyle"
                android:layout_weight="1"
                android:background="@drawable/cabinet"
                android:text="@string/cabinet" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
