<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_padding"
    android:id="@+id/l_shopping"
    android:orientation="vertical">
    <include layout="@layout/view_day_time"/>
    <include layout="@layout/divider"/>
    <TextView
        android:id="@+id/tv_select_plan"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_plan_text_size"
        android:layout_marginTop="@dimen/mid_padding"
        android:gravity="center"
        android:text="@string/plan_shopping"
        android:textSize="@dimen/title_text_size" />
    <RadioGroup
        android:id="@+id/rg_shopping"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/tv_shopping_app"
            style="@style/TextStyle"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_app"/>
        <RadioButton
            android:id="@+id/tv_shopping_dist_group"
            style="@style/TextStyle"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_padding"
            android:text="@string/shopping_dist_group"/>
        <RadioButton
            android:id="@+id/tv_shopping_group"
            style="@style/TextStyle"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_padding"
            android:text="@string/shopping_group"/>
        <RadioButton
            android:id="@+id/tv_shopping_private"
            style="@style/TextStyle"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_padding"
            android:text="@string/shopping_private"/>

    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_shopping_confirm"
            style="@style/BtnStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/confirm_btn_padding"
            android:background="@color/btn_confirm"
            android:text="@string/btn_confirm" />
    </RelativeLayout>

</LinearLayout>
