<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_padding"
    android:orientation="vertical">

    <include layout="@layout/view_main_basic"/>
    <include layout="@layout/view_day_time"/>
    <TextView
        android:id="@+id/tv_select_plan"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:autoSizeMaxTextSize="@dimen/title_text_size"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/shopping_choose_title"/>

<!--    <TextView-->
<!--        android:layout_marginTop="@dimen/basic_padding"-->
<!--        android:id="@+id/tv_shopping_money"-->
<!--        style="@style/TextStyle"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/money_value" />-->

    <LinearLayout
        android:layout_marginTop="@dimen/basic_padding"
        android:id="@+id/l_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </LinearLayout>
        <TextView
            android:layout_weight="2"
            android:width="0dp"
            android:id="@+id/tv_price"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_price"
            android:textSize="@dimen/content_text_size" />

        <TextView
            android:layout_weight="2"
            android:width="0dp"
            android:id="@+id/tv_volume"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_volume"
            android:textSize="@dimen/content_text_size" />
        <TextView
            android:layout_weight="1"
            android:width="0dp"
            android:id="@+id/tv_volume_max"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_volume_max"
            android:textSize="@dimen/content_text_size" />

    </LinearLayout>

    <com.bigcity.hungry2022.BaseRecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <TextView
        android:id="@+id/tv_pay"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_padding"
        android:gravity="center"
        android:text="@string/shopping_pay"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_shopping_list_confirm"
            style="@style/WeightBtnStyle"
            android:layout_marginTop="@dimen/mid_padding"
            android:layout_marginBottom="@dimen/confirm_btn_padding"
            android:background="@color/btn_confirm"
            android:text="@string/btn_confirm" />
        <View
            android:layout_width="@dimen/basic_padding"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn_shopping_list_cancel"
            style="@style/WeightBtnStyle"
            android:layout_marginTop="@dimen/mid_padding"
            android:layout_marginBottom="@dimen/confirm_btn_padding"
            android:background="@color/btn_confirm"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>
